@@ -1,3 +1,7 @@
+2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: Clear history menu item.
+    * data/fantasdic/ui/menus.xml: Likewise.
 
 2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>
 
